fixed spacing

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -19,7 +19,7 @@ body {
 }
 
 .content-section {
-  padding-top: 7.5rem;
+  padding-top: 3.5rem;
   padding-bottom: 7.5rem;
 }
 
